# livekit-ai-agent

./: .dockerignore  .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
agent-starter-react/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  app-config.ts  jest.config.ts  package-lock.json  package.json  taskfile.yaml
agent-starter-react/.github/workflows/: build-and-test.yaml
agent-starter-react/app/(app)/: layout.tsx
agent-starter-react/app/ui/: layout.tsx
agent-starter-react/components/app/: app.tsx  auth-header.tsx  chat-transcript.tsx  disconnect-simulator.tsx  prompt-session-handler.tsx  session-history-tracker.tsx  session-provider.tsx  session-view.tsx  sidebar.tsx  tile-layout.tsx  view-controller.tsx  welcome-view.tsx
agent-starter-react/components/history/: session-history-dashboard.tsx
agent-starter-react/components/livekit/: chat-entry.test.tsx
agent-starter-react/components/prompts/: command-palette-provider.tsx  command-palette.tsx  prompt-context.tsx  prompt-dashboard.tsx  prompt-selector.tsx  selected-prompt-display.tsx
agent-starter-react/hooks/: useAgentPrompt.ts  useAuth.ts  useConnectionDetails.ts  useConnectionResilience.ts  useKeyboardShortcuts.ts  usePrompts.ts  useRoom.ts  useSessionHistory.ts
agent-starter-react/lib/: api-client.ts  auth.ts
agent-starter-react/lib/store/: prompt-store.ts  session-history-store.ts
agent-starter-react/lib/types/: prompt.ts  (+1 more)
livekit-voice-agent/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  agent.py  health_server.py  pyproject.toml  test_agent.py
(+13 files in other folders)
